--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,6 @@
-.App {
-  text-align: center;
-}
+body {
+  background-color: rgb(56, 55, 55);
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -21,18 +11,21 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: white; */
 }
 
-.App-link {
-  color: #61dafb;
+.calc-wrapper {
+  background-color: rgb(169, 165, 165);
+  width: 400px;
+  height: 500px;
+  border: 2px outset black;
+  margin: 50px auto;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(180deg);
-  }
+.pay-button {
+ display: flex;
+ justify-content: center;
+ align-items: center;
 }
+
