--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,42 @@ body {
 }
 
 li { 
-  color: lightgreen;
+  color: rgb(3, 124, 3);
   list-style: none;
+  border: .5px solid black;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 0;
+  font-weight: 800;
+}
+
+ul {
+  width: 200px;
+  background-color: white;
+  border-radius: 10px;
+  padding: 0;
+  margin: 0 auto;
+  text-align: center;
 }
 
 button {
-  background-color: green;
+  background-color:  rgb(63, 111, 73);
+  color: white;
   border-radius: 5px;
   padding: 10px;
   font-weight: 800;
 }
   
+.reset {
+  text-align: center;
+}
+
+
+.resetButton {
+  text-align: center;
+  padding: 5px;
+  background-color: red;
+}
 
 .App-header {
   background-color: #282c34;
@@ -69,12 +94,15 @@ input {
 }
 
 .history {
+  background: white;
   text-align: center;
   font-weight: 600;
   border-bottom: 1px solid black;
+  border-radius: 10px;
   width: 200px;
   margin: auto;
-  color: lightgreen;
+  color: #0c0d0c;
+  padding: 15px;
 }
 
 .payoff {
